--- a/toti/index.html
+++ b/toti/index.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8"/>
-    <title> Meu Primeiro Site - Toters Website :) </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <title>Dev. Sabrina Caldas</title>
+
 </head>
 <body>
-    <!-- este é a área de menu do site -->
-     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Página Inicial</a> </li>
-            <li><a href="#">Sobre</a></li>
-            </ul>
-        </nav>
-     </header>
-    <h1>Noticias Urgentes</h1>
-    <p>Saiu o primeiro sistema operacional para relogios inteligente.</p>
-<footer>
-    Todos os direitos reservados <br/>
-    Instagram - X
-</footer>
+    <main class="cartao">
+        <div class="minhas-informacoes">
+            <img src="./img/foto-perfil.jpg" alt="Foto de Perfil">
+            <h1 class="nome">Sabrina Caldas</h1>
+            <h2 class="cargo">Aprendiz DEV.</h2>
+        </div>
 
+        <div class="conteudo">
+            <ul class="abas">
+                <li class="aba selecionado" id="sobre-mim">
+                    <img src="./img/sobre.gif" alt="Ícone sobre mim">
+                </li>
+                <li class="aba" id="minhas-redes">
+                    <img src="./img/coracao.gif" alt="Ícone de redes sociais">
+                </li>
+            </ul>
+            <div class="informacoes-abas">
+                <div class="informacao selecionado" id="informacao-sobre-mim">
+                    <h3 class="sub-titulo">O Início da Jornada</h3>
+                    <div class="descricao">
+                        <p>Olá meu nome é Sabrina Caldas Rodrigues, tenho 28anos e estou passando pela migração de carreir</p>
+                        <p>trabalho como recepcionista de uma empresa de tecnologia, foi o que fez eu me apaixonar pela área
+                            começei a fazer faculdade e logo me apaixonei pela area de front end e full stack, agora aprendendo <span>HTML</span>, daqui uns dias vou me especializar no <span>CSS</span> e dar vida a suas criações com <span>JavaScript</span>. Vou enfrenta os bugs como desafios a serem superados, aprimorar minhas habilidades como uma verdadeira maga digital.</p>
+                        <p>e escrever aqui <span>HTML</span>, <span>CSS </span> e <span>JavaScript</span>, ele forja seu caminho para se tornar um dev mestre full stack nesse vasto reino de bytes e lógica.</p>
+                    </div>
+                </div>
+                <div class="informacao" id="informacao-minhas-redes">
+                    <h3 class="sub-titulo">Minhas redes</h3>
+                    <ul class="redes-sociais">
+                        <li>
+                            <a href="https://drive.google.com/drive/u/0/home" target="_blank" class="curriculo">Currículo</a>
+                        </li>
+                        <li><a href="https://www.linkedin.com/in/sabrina-caldas-a4b6421b7/" target="_blank" class="linkedin">LinkedIn</a></li>
+                        <li><a href="https://github.com/biinahc" target="_blank" class="github">GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
